--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://andrewdbritt-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer2.1gw3z0xlo0hb.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1i04m7l604tt.us-south.codeengine.appdomain.cloud/
